a lot of refactoring. still working on it

--- a/adsgen.cfg
+++ b/adsgen.cfg
@@ -1,6 +1,24 @@
 ; Modify me before first use
 
 [server]
-address =
-username =
+address = ; ldaps://example.com
+username = ; user@example.com
 password =
+
+[google]
+domain = ; example.com
+employee_base = ; Base OU for employee accounts
+student_base = ; Base OU for student accounts
+employee_sub = ; comma-separated list of child OUs for employee accounts
+student_sub_structure = division,grade,class ; structure of student OU
+divisions = lower,middle,upper ; division names
+class_prefix = ClassOf ; prefix for class OUs
+
+[ad]
+domain = ; Base DN (dc=example,dc=com)
+employee_base = ; Base OU for employee accounts
+student_base = ; Base OU for student accounts
+employee_sub = ; comma-separated list of child OUs for employee accounts
+student_sub_structure = class,grade,division ; structure of student OU
+divisions = lower,middle,upper ; division names
+class_prefix = ClassOf ; prefix for class OUs
