--- a/adsgen.cfg
+++ b/adsgen.cfg
@@ -1,24 +1,42 @@
 ; Modify me before first use
 
 [server]
-address = ; ldaps://example.com
-username = ; user@example.com
+; LDAP server address, ex ldaps://example.com
+address =
+; Username, ex user@example.com
+username =
+; Plaintext password
 password =
 
 [google]
-domain = ; example.com
-employee_base = ; Base OU for employee accounts
-student_base = ; Base OU for student accounts
-employee_sub = ; comma-separated list of child OUs for employee accounts
-student_sub_structure = division,grade,class ; structure of student OU
-divisions = lower,middle,upper ; division names
-class_prefix = ClassOf ; prefix for class OUs
+; Primary G-Suite Domain, ex example.com
+domain =
+; Base OU for employee accounts, ex Staff
+employee_base =
+; Base OU for student accounts, ex Student
+student_base =
+; Comma-separated list of child OUs for employee accounts, ex Faculty,IT,Admin
+employee_sub =
+; Structure of student OU. Options are division, grade, and class
+; The order of these options should match the order of sub-orgs
+student_sub_structure = division,grade,class
+; Division names NOT YET IMPLEMENTED
+divisions = lower,middle,upper
+; Prefix for class OUs, ex ClassOf, where an example student's class OU would be ClassOf2030
+class_prefix = ClassOf
 
 [ad]
-domain = ; Base DN (dc=example,dc=com)
-employee_base = ; Base OU for employee accounts
-student_base = ; Base OU for student accounts
-employee_sub = ; comma-separated list of child OUs for employee accounts
-student_sub_structure = class,grade,division ; structure of student OU
-divisions = lower,middle,upper ; division names
-class_prefix = ClassOf ; prefix for class OUs
+; Base DN, ex dc=example,dc=com
+domain =
+; Base OU for employee accounts, ex ou=Staff
+employee_base =
+; Base OU for student accounts, ex ou=Student
+student_base =
+; comma-separated list of child OUs for employee accounts
+employee_sub =
+; Structure of student OU, see [google] section above
+student_sub_structure = class,grade,division
+; Division names NOT YET IMPLEMENTED
+divisions = lower,middle,upper
+; Prefix for class OUs
+class_prefix = ClassOf
