Major bugfix, building out additonal utilities

--- a/adsgen.cfg
+++ b/adsgen.cfg
@@ -24,6 +24,12 @@ student_sub_structure = division,grade,class
 divisions = lower,middle,upper
 ; Prefix for class OUs, ex ClassOf, where an example student's class OU would be ClassOf2030
 class_prefix = ClassOf
+; Graduate OU
+student_graduate = Graduates
+; Graduate distribution list (no domain)
+graduate_group = graduates
+; Suspended OU
+suspended = Suspended
 
 [ad]
 ; Base DN, ex dc=example,dc=com
